[gd_scene load_steps=4 format=2]

[ext_resource path="res://sensor_component.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background_flat.png" type="Texture" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="SensorComponent" parent="." instance=ExtResource( 1 )]

[node name="BackgroundFlat" type="Sprite" parent="."]
position = Vector2( 360, 544 )
texture = ExtResource( 2 )

[node name="Control" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 3, 3 )

[node name="OS" type="Label" parent="Control"]
margin_right = 149.0
margin_bottom = 14.0
text = "OS"

[node name="Gyroscope" type="Label" parent="Control"]
margin_top = 18.0
margin_right = 149.0
margin_bottom = 32.0
text = "Gyroscope"

[node name="EnableGyro" type="CheckButton" parent="Control"]
margin_top = 36.0
margin_right = 149.0
margin_bottom = 76.0
focus_mode = 0
size_flags_horizontal = 0
text = "Allow Gyro"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 360, 544 )
current = true

[connection signal="gyroscope_triggered" from="SensorComponent" to="." method="_on_SensorComponent_gyroscope_triggered"]
[connection signal="ios_permission_requested" from="SensorComponent" to="." method="_on_SensorComponent_ios_permission_requested"]
[connection signal="toggled" from="Control/EnableGyro" to="." method="_on_EnableGyro_toggled"]
